# LibAvCpp

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  build.sh  conanfile.txt  libavcpp.h
cmake/: boost.cmake  ffmpeg.cmake  gtest.cmake
cmake/Modules/: FindLibAO.cmake  FindLibAVCodec.cmake  FindSDL.cmake
conan/: conanfile.py.in
libavcpp/: CMakeLists.txt  __av.cpp  __av.h  __avformat.cpp  __avformat.h  __avformatcontext.cpp  __avformatcontext.h  __iocontext.cpp  __iocontext.h  _constants.h  audiofifo.cpp  audiofifo.h  averrc.cpp  averrc.h  aviostream.cpp  aviostream.h  codec.cpp  codec.h  codectype.cpp  codectype.h  description.h  dynamicrange.cpp  dynamicrange.h  format.cpp  format.h  formatcontext.cpp  formatcontext.h  frame.cpp  frame.h  libav.cpp  libav.h  mediainfo.h  mediatype.cpp  mediatype.h  metadata.cpp  metadata.h  option.cpp  option.h  packet.cpp  packet.h  (+4 more)
samples/: CMakeLists.txt  encode.cpp  metadata.cpp  play_ao.cpp  play_sdl.cpp  play_sfml.cpp
test/: CMakeLists.txt  _testconstants.h  averrctest.cpp  formattest.cpp  libavtest.cpp  libavwrappertest.cpp  metadatatest.cpp  optionstest.cpp  plainimplementation.cpp  plainimplementation.h  streamtest.cpp
